# webedzhd

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  last-updated.txt
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-commit.yml
backup/: .gitkeep
docs/: architecture.md  build.md  faq.md
driver/: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/cli/: main.cpp
src/core/: BackupManager.cpp  BackupManager.h  HwidReader.cpp  HwidReader.h  Logger.cpp  Logger.h  SpoofEngine.cpp  SpoofEngine.h
src/gui/: CMakeLists.txt  main.cpp
src/modules/: DiskSerialSpoofer.cpp  ISpoofModule.h  MacSpoofer.cpp  RegistryCleaner.cpp  SmbiosSpoofer.cpp  VolumeSerialSpoofer.cpp
